# GPU-RayCasting-Quadrics

./: .gitignore  CMakeLists.txt  README.md
bench_data/AMD/: bench_bare_amd.csv  bench_full_1080p_amd.csv  bench_full_720p_amd.csv  bench_full_native_amd.csv  bench_load_amd.csv  bench_no_outlines_amd.csv  bench_no_shadows_amd.csv  bench_no_ssao_amd.csv
bench_data/M3/: bench_bare_m3.csv  bench_full_1080p_m3.csv  bench_full_720p_m3.csv  bench_full_native_m3.csv  bench_load_m3.csv  bench_no_outlines_m3.csv  bench_no_shadows_m3.csv  bench_no_ssao_m3.csv
include/: Renderer.h  Shader.h
include/Core/: Camera.h  GpuTimer.h  Renderer.h  Shader.h
include/Geometry/: Bonds.h  PDB.h  Quadric.h
report/: report.tex
report/tables/: ablation_amd.tex  ablation_m3.tex  compare_ablation.tex  compare_perpass.tex  compare_resolution.tex  load_amd.tex  load_m3.tex  perpass_amd.tex  perpass_m3.tex  resolution_amd.tex  resolution_m3.tex  scaling_amd.tex  scaling_m3.tex
scripts/: analyze_bench.py
shaders/: atom.frag  atom.vert  composite.frag  cylinder.frag  cylinder.vert  ground.frag  ground.vert  lighting.frag  lighting.vert  quad.frag  quad.vert  quadric.frag  quadric.vert  shadow.frag  shadowcylinder.frag  shadowcylinder.vert  shadowground.vert  shadowsphere.frag  shadowsphere.vert  silhouette.frag  ssao.frag  ssaoblur.frag
src/: Renderer.cpp  glad.c  main.cpp
src/Core/: Camera.cpp  Renderer.cpp
src/Geometry/: Bonds.cpp  PDB.cpp  Quadric.cpp
